# langgraph_cus_analysis

./: .gitignore  ARCHITECTURE.md  INSTALLATION.md  README.md  akshare_concept_api.py  akshare_concept_export.py  akshare_industry_api.py  akshare_test.ipynb  akshare_test.py  eastmoney_concept_constituents.xlsx  pyproject.toml  requirements.txt  streamlit_app.py  sw_third_industry_constituents.xlsx
backend/dataflow/: akshare_concept_api.py
backend/knowledge/: __init__.py  init_kb.py
backend/src/agent/: app.py  configuration.py  graph.py  knowledge_base.py  prompts copy.py  prompts.py  state.py  utils.py
claude_sdk/: __init__.py  __main__.py  main.py  tools.py  workflow.py
crewai_app/: __main__.py  configuration.py  crew.py  crew_builder.py  knowledge_base.py  llm.py  main.py  prompts.py  query_patterns.py  schemas.py  tools.py
crewai_app/config/: agents.yaml  tasks.yaml
data/: xm_match_financial_to_extra.json  xm_match_financial_to_extra.xlsx  xm_match_results.json  xm_match_results.xlsx  三安光电.md  三安光电_sections.json
examples/: run_graph.py  test.py
google_adk/my_agent/: agent.py
langchain_app/: pdf_to_md.py  test.py
normal_app/: match_xm_pdf.py  run.py
plan_app/: __init__.py  run.py  solution_app.py
scripts/: docker-setup.sh  fix-openmp.sh  install.bat  install.sh  run-safe.sh  run-with-openmp.sh
